$Id$

2018-04-19  Christian Franke  <franke@computer.org>

	utility.cpp: Add check of sg_get_unaligned_[bl]e64() to
	check_endianness().

2018-04-16  Douglas Gilbert  <dgilbert@interlog.com>

	switch usage of unaligned.h to sg_unaligned.h which is functionally
	the same. sg_unaligned.h is the same header used by libsgutils which
	is the basis of the sg3_utils, sdparm and ddpt packages available on
	many of the same architectures as smartmontools is. This change
	introduces a "sg_" prefix on the inline functions defined
	sg_unaligned.h . The new header has specializations for big and little
	endian machines that depends on the non-standard bswap_16(), bswap_32()
	and bswap_64() calls. They are defined in the byteswap.h header which is
	a GNU extension. According to the 'net both gcc and clang use intrinsics
	{assembler ?} to implement these calls. If the byteswap.h header is not
	present on the build machine, the generic implementations will be
	used for the "unaligned" family of functions. Additionally the generic
	implementations can be imposed with './configure --disable-fast-lebe'.
	Developers may need to use './autogen.sh' prior to their normal build
	sequence. Please report any problems to the author.

2018-03-28  Christian Franke  <franke@computer.org>

	ataprint.cpp, nvmeprint.cpp, scsiprint.cpp:
	Output JSON 'user_capacity' as 'blocks' and 'bytes'.
	Handle both as unsafe ints.

	smartd.cpp: Ignore remaining percentage in initial check of
	self-test execution status.

	scsiata.cpp: Fix device type info for 'usbcypress'.

	os_linux.cpp: Fix device scan crash on missing /proc/devices.

	update-smart-drivedb.in, update-smart-drivedb.8.in:
	Add option '-u github'.

2018-03-20  Christian Franke  <franke@computer.org>

	nvmeprint.cpp: Add initial JSON support for '-i', '-H' and '-A'.

	json.cpp, json.h: Add support for 64 and 128 bit unsigned
	integers.  Add 'set_unsafe_*()' member functions to print unsigned
	integers >= 53 bit as JSON number and string.
