@@ -2,6 +2,9 @@ $Id$
 
 2018-04-19  Christian Franke  <franke@computer.org>
 
+	utility.cpp, utility.h: Use array reference for buffer parameter
+	of dateandtimezoneepoch().  Remove no longer used dateandtimezone().
+
 	utility.cpp: Add check of sg_get_unaligned_[bl]e64() to
 	check_endianness().
 
